--- a/style.css
+++ b/style.css
@@ -88,8 +88,6 @@ main {
 }
 
 .assuntos {
-    border: 1px solid red;
-
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -104,6 +102,21 @@ main {
     padding: 12px;
     border-radius: 12px;
     box-shadow: var(--shadow);
+}
+
+.assuntos button div {
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 12px;
+    box-sizing: var(--shadow);
+    font-size: 10px;
+    font-weight: 500;
+    color: var(--primary-text-color);
+}
+
+.assuntos button img {
+    width: 100%;
 }
 
 .botao.html div {
