--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Rubik", sans-serif;
-    -webkit-font-smoothing: antialiased;
+    -webkit-font-smothing: antialiased;
 }
 
 :root {
-    --bg-color: #f4f6fa;
+    --bg-color:#f4f6fa;
     --purple: #a729f5;
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
@@ -15,11 +15,21 @@
     --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #fff1e9;
     --bg-css: #e0fdef;
-    --bg-javascript: #ebf0ff;
-    --bg-acessibilidades: #f6e7ff;
-    --white: #fff;
-    --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg)
-    --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg)
+    --bg-javascript:#ebf0ff;
+    --bg-acessibilidade: #f6e7ff;
+    --white: #ffff;
+    --bg-mobile: url(./assets/images/pattern-background-mobile-ligth.svg);
+    --bg-desktop: url(./assets/images/pattern-background-desktop-ligth.svg);
+}
+
+body.escuro {
+    --bg-color: #313e51;
+    --bg-mobile: url(./assets/images/pattern-background-mobile-dark.svg);
+    --bg-desktop: url(./assets/images/pattern-background-desktop-dark.svg);
+    --primary-text-color: #fff;
+    --secundary-text-color: #abc1e1;
+    --button-bg: #3b4d66;
+    --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
 }
 
 body {
@@ -30,23 +40,26 @@ body {
 }
 
 header {
+   
+
     padding: 16px 24px;
     display: flex;
     justify-content: flex-end;
 }
 
 .tema {
+
     padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
 }
 
-.tema img {
+.tema img{
     width: 16px;
 }
 
-.tema button {
+.tema button{
     height: 20px;
     width: 32px;
     background: var(--purple);
@@ -56,7 +69,7 @@ header {
 }
 
 .tema button div {
-    background: var(--white);
+    background: var(--white) ;
     width: 12px;
     height: 12px;
     border-radius: 999px;
@@ -64,6 +77,7 @@ header {
 
 main {
     padding: 32px 24px;
+
 }
 
 .boas_vindas {
@@ -103,37 +117,36 @@ main {
     padding: 12px;
     border-radius: 12px;
     box-shadow: var(--shadow);
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--primary-text-color);
 }
 
 .assuntos button div {
     width: 40px;
     height: 40px;
     padding: 5px;
-    border-radius: 12px;
-    box-sizing: var(--shadow);
-    font-size: 10px;
-    font-weight: 500;
-    color: var(--primary-text-color);
+    border-radius: 5px;
 }
 
 .assuntos button img {
     width: 100%;
 }
 
-.botao.html div {
-    background: var(--bg-html);
+.botao_html div {
+    background: var(--bg-html) ;
 }
 
-.botao.css div {
+.botao_css div {
     background: var(--bg-css);
 }
 
-.botao.javascript div {
+.botao_javascript div {
     background: var(--bg-javascript);
 }
 
-.botao.acessibilidade div {
-    background: var(--bg-acessibilidades);
+.botao_acessibilidade div {
+    background: var(--bg-acessibilidade);
 }
 
 @media(min-width: 1100px) {
@@ -142,7 +155,7 @@ main {
         background-size: cover;
         background-repeat: no-repeat;
     }
-
+    
     header {
         margin-block: 81px;
     }
