--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -17,6 +17,8 @@
     --bg-javascript:#ebf0ff;
     --bg-acessibilidade: #f6e7ff;
     --white: #ffff;
+    --green: #26d782;
+    --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-ligth.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-ligth.svg);
 }
@@ -152,7 +154,13 @@ main {
 }
 
 .alternativas label:has(input:checked) {
+    outline: 3px solid var(--purple);
     
+    
+    & span {
+        background: var(--purple);
+        color: var(--white);
+    }
 }
 
 .alternativas input {
@@ -166,7 +174,7 @@ main {
 
 }
 
-.alternativas div span {
+.alternativas div span{
     display: block;
     width: 40px;
     height: 40px;
