--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -22,8 +22,8 @@
     --white: #ffff;
     --green: #26d782;
     --red: #ee5454;
-    --bg-mobile: url(../../assets/images/pattern-background-mobile-ligth.svg);
-    --bg-desktop: url(../../assets/images/pattern-background-desktop-ligth.svg);
+    --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
+    --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
 }
 
 body.escuro {
@@ -92,6 +92,8 @@ header {
     border: 0;
     border-radius: 999px;
     padding: 4px;
+    display: flex;
+   
 }
 
 .tema button div {
