--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -1,43 +1,47 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Rubik", sans-serif;
-    -webkit-font-smothing: antialiased;
+    -webkit-font-smoothing: cover;
 }
+
 :root {
-    --bg-color:#f4f6fa;
+    --bg-color: #f4f6fa;
     --bg-span: #f4f6fa;
-    --span: #626c7f;
+    --color-span: #626c7f;
     --purple: #a729f5;
-    --purple-hover: rgb(167, 41, 245, 0.7);
+    --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
     --button-bg: #fff;
     --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #fff1e9;
     --bg-css: #e0fdef;
-    --bg-javascript:#ebf0ff;
+    --bg-javascript: #ebf0ff;
     --bg-acessibilidade: #f6e7ff;
-    --white: #ffff;
+    --white: #fff;
     --green: #26d782;
     --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
-    --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
+    --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg)
+   
 }
 
 body.escuro {
     --bg-color: #313e51;
-    --color-span: #313e51;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-dark.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
-    --secundary-text-color: #abc1e1;
+    --secondary-text-color: #abc1e1;
     --button-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
+    --color-span: #313e51;
+    
 }
+
 body {
-    height: 100svh;
+    height: 100vh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
@@ -55,29 +59,31 @@ header {
     gap: 16px;
 }
 
-.assunto_icone {
+.assunto_icone{
+   
     width: 40px;
     height: 40px;
     padding: 5px;
     border-radius: 5px;
 }
 
-.assunto_icone.html {
+.assunto_icone.html{
     background: var(--bg-html);
 }
 
-.assunto_icone.css {
+.assunto_icone.css{
     background: var(--bg-css);
 }
 
-.assunto_icone.javascript {
+.assunto_icone.javascript{
     background: var(--bg-javascript);
 }
 
-.assunto_icone.acessibilidade {
+.assunto_icone.acessibilidade{
     background: var(--bg-acessibilidade);
 }
-.assuntos_icone img {
+
+.assunto_icone img {
     width: 100%;
 }
 
@@ -87,19 +93,20 @@ header {
     color: var(--primary-text-color);
 }
 
-.tema {
 
+.tema {
     padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
+
 }
 
-.tema img{
+.tema img {
     width: 16px;
 }
 
-.tema button{
+.tema button {
     height: 20px;
     width: 32px;
     background: var(--purple);
@@ -108,15 +115,15 @@ header {
     padding: 4px;
     display: flex;
     cursor: pointer;
-   
 }
 
 .tema button div {
-    background: var(--white) ;
+    background: var(--white);
     width: 12px;
     height: 12px;
     border-radius: 999px;
 }
+
 
 main {
     padding: 32px 24px;
@@ -129,7 +136,7 @@ main {
 .pergunta p {
     font-style: italic;
     font-size: 14px;
-    color: var(--secundary-text-color);
+    color: var(--secondary-text-color);
     margin-bottom: 12px;
 }
 
@@ -162,6 +169,7 @@ main {
     margin-bottom: 12px;
 }
 
+
 .alternativas label {
     display: block;
     background: var(--button-bg);
@@ -175,40 +183,41 @@ main {
 }
 
 .alternativas label:hover {
-  & span {
-    background: var(--bg-acessibilidade);
-    color: var(--purple);
-  }
-}
-
-.alternativas label:has(input:checked) {
-    outline: 3px solid var(--purple);
-    
-    
     & span {
-        background: var(--purple);
-        color: var(--white);
+        background: var(--bg-acessibilidade);
+        color: var(--purple);
     }
 }
 
-.alternativas label#correta {
+.alternativas label:has(input:checked){
+    outline: 3px solid var(--purple);
+
+    & span {
+        background: var(--purple);
+        color: var(--white)
+    }
+}
+
+.alternativas label#correta{
     outline: 3px solid var(--green);
 
     & span {
-        background: var(--green);
-        color: var(--white);
+       background: var(--green);
+       color: var(--white);
     }
 }
 
-.alternativas label#errada {
+.alternativas label#errada{
     outline: 3px solid var(--red);
 
     & span {
-        background: var(--red);
-        color: var(--white);
+       background: var(--red);
+       color: var(--white);
     }
-
 }
+
+
+
 
 .alternativas input {
     display: none;
@@ -218,20 +227,19 @@ main {
     display: flex;
     align-items: center;
     gap: 16px;
-
+    
 }
 
-.alternativas div span{
+.alternativas div span {
     display: block;
     width: 40px;
     height: 40px;
     background: var(--bg-span);
     border-radius: 5px;
-    color: var(--color-span);
-
     display: flex;
     align-items: center;
     justify-content: center;
+    color: var(--color-span);
     flex-shrink: 0;
 }
 
@@ -242,7 +250,6 @@ main {
     background: var(--purple);
     color: var(--white);
     width: 100%;
-
     font-size: 18px;
     font-weight: 500;
     transition: background 0.3s;
@@ -251,15 +258,23 @@ main {
 .alternativas button:hover {
     background: var(--purple-hover);
     cursor: pointer;
-
 }
 
-@media(min-width:1100px) {
-    body{
+
+
+
+
+
+
+
+
+@media(min-width: 1100px){
+    body {
         background: var(--bg-desktop) var(--bg-color);
         background-size: cover;
         background-repeat: no-repeat;
     }
+
     header {
         margin-block: 81px;
         max-width: 1160px;
@@ -274,9 +289,11 @@ main {
 
     .assunto h1 {
         font-size: 28px;
+
     }
+
     .tema {
-        gap: 16px;
+        gap: 16px
     }
 
     .tema img {
@@ -296,13 +313,14 @@ main {
     main {
         max-width: 1160px;
         margin-inline: auto;
-
         display: flex;
-        gap: 130px;
+        gap: 130px
     }
+    
 
     section {
         width: 100%;
+        
     }
 
     .pergunta {
@@ -331,6 +349,7 @@ main {
         font-size: 22px;
         padding: 18px 20px;
         border-radius: 24px;
+
     }
 
     .alternativas div {
@@ -346,4 +365,8 @@ main {
     .alternativas button {
         font-size: 22px;
     }
+
+
+
+
 }
