--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -1,45 +1,50 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Rubik", sans-serif;
-    -webkit-font-smothing: antialiased;
+    -webkit-font-smoothing: cover;
 }
+
 :root {
-    --bg-color:#f4f6fa;
+    --bg-color: #f4f6fa;
     --bg-span: #f4f6fa;
-    --span: #626c7f;
+    --color-span: #626c7f;
     --purple: #a729f5;
-    --purple-hover: rgb(167, 41, 245, 0.7);
+    --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
     --pontuacao-bg: #fff;
     --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #fff1e9;
     --bg-css: #e0fdef;
-    --bg-javascript:#ebf0ff;
+    --bg-javascript: #ebf0ff;
     --bg-acessibilidade: #f6e7ff;
-    --white: #ffff;
+    --white: #fff;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
-    --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
+    --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg)
+   
 }
 
 body.escuro {
     --bg-color: #313e51;
-    --color-span: #313e51;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-dark.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
-    --secundary-text-color: #abc1e1;
+    --secondary-text-color: #abc1e1;
     --pontuacao-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
+    --color-span: #313e51;
+    
 }
+
 body {
-    height: 100svh;
+    height: 100vh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 
 header {
     display: flex;
@@ -53,7 +58,7 @@ header {
     gap: 16px;
 }
 
-.assunto_icone {
+.assunto_icone{
     background: var(--bg-acessibilidade);
     width: 40px;
     height: 40px;
@@ -61,7 +66,26 @@ header {
     border-radius: 5px;
 }
 
-.assuntos_icone img {
+
+.assunto_icone.html{
+    background: var(--bg-html);
+}
+
+.assunto_icone.css{
+    background: var(--bg-css);
+}
+
+.assunto_icone.javascript{
+    background: var(--bg-javascript);
+}
+
+.assunto_icone.acessibilidade{
+    background: var(--bg-acessibilidade);
+}
+
+
+
+.assunto_icone img {
     width: 100%;
 }
 
@@ -71,19 +95,20 @@ header {
     color: var(--primary-text-color);
 }
 
-.tema {
 
+.tema {
     padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
+
 }
 
-.tema img{
+.tema img {
     width: 16px;
 }
 
-.tema button{
+.tema button {
     height: 20px;
     width: 32px;
     background: var(--purple);
@@ -95,7 +120,7 @@ header {
 }
 
 .tema button div {
-    background: var(--white) ;
+    background: var(--white);
     width: 12px;
     height: 12px;
     border-radius: 999px;
@@ -103,18 +128,20 @@ header {
 
 main {
     padding: 32px 24px;
-}
 
+}
 
 main h2 {
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
     margin-bottom: 40px;
+
 }
 
 main h2 strong {
     font-weight: 500;
+
 }
 
 .pontuacao {
@@ -136,7 +163,7 @@ main h2 strong {
 }
 
 .pontuacao p {
-    color: var(--secundary-text-color);
+    color: var(--secondary-text-color);
     font-size: 18px;
 
 }
@@ -148,7 +175,6 @@ main button {
     background: var(--purple);
     color: var(--white);
     width: 100%;
-
     font-size: 18px;
     font-weight: 500;
     transition: background 0.3s;
@@ -160,12 +186,16 @@ main button:hover {
     cursor: pointer;
 }
 
+
+
+
 @media(min-width: 1100px){
-    body{
+    body {
         background: var(--bg-desktop) var(--bg-color);
         background-size: cover;
         background-repeat: no-repeat;
     }
+
     header {
         margin-block: 81px;
         max-width: 1160px;
@@ -180,9 +210,11 @@ main button:hover {
 
     .assunto h1 {
         font-size: 28px;
+
     }
+
     .tema {
-        gap: 16px;
+        gap: 16px
     }
 
     .tema img {
@@ -199,8 +231,7 @@ main button:hover {
         height: 20px;
     }
 
-
-    main {
+    main{
         display: flex;
         gap: 140px;
         max-width: 1160px;
@@ -208,7 +239,7 @@ main button:hover {
     }
 
     main h2,
-    main > div {
+    main div {
         width: 100%;
     }
 
@@ -217,21 +248,25 @@ main button:hover {
     }
 
     .pontuacao {
-        border-radius: 24px;
+        border-radius: 24px ;
         margin-bottom: 32px;
     }
 
-    .resultados strong {
+    .pontuacao strong {
         font-size: 144px;
     }
 
     .pontuacao p {
         font-size: 24px;
     }
-
+    
     main button {
         font-size: 22px;
         padding: 24px;
         border-radius: 24px;
     }
+
+
+
+
 }
