--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Rubik", sans-serif;
-    -webkit-font-smothing: antialiased;
+    -webkit-font-smoothing: cover;
 }
 
 :root {
-    --bg-color:#f4f6fa;
+    --bg-color: #f4f6fa;
     --purple: #a729f5;
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
@@ -15,11 +15,12 @@
     --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
     --bg-html: #fff1e9;
     --bg-css: #e0fdef;
-    --bg-javascript:#ebf0ff;
+    --bg-javascript: #ebf0ff;
     --bg-acessibilidade: #f6e7ff;
-    --white: #ffff;
+    --white: #fff;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
-    --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg);
+    --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg)
+   
 }
 
 body.escuro {
@@ -27,52 +28,52 @@ body.escuro {
     --bg-mobile: url(./assets/images/pattern-background-mobile-dark.svg);
     --bg-desktop: url(./assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color: #fff;
-    --secundary-text-color: #abc1e1;
+    --secondary-text-color: #abc1e1;
     --button-bg: #3b4d66;
     --shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
+    
 }
 
 body {
-    height: 100svh;
+    height: 100vh;
     background: var(--bg-mobile) var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-header {
-   
-
-    padding: 16px 24px;
-    display: flex;
-    justify-content: flex-end;
     max-width: 1160px;
     margin-inline: auto;
 }
 
-.tema {
+header {
+    padding: 16px 24px;
+    display: flex;
+    justify-content: flex-end;
+}
 
+.tema {
     padding: 8px 0;
     display: flex;
     align-items: center;
     gap: 8px;
+
 }
 
-.tema img{
+.tema img {
     width: 16px;
 }
 
-.tema button{
+.tema button {
     height: 20px;
     width: 32px;
     background: var(--purple);
     border: 0;
     border-radius: 999px;
     padding: 4px;
+    display: flex;
     cursor: pointer;
 }
 
 .tema button div {
-    background: var(--white) ;
+    background: var(--white);
     width: 12px;
     height: 12px;
     border-radius: 999px;
@@ -87,12 +88,14 @@ main {
     margin-bottom: 40px;
 }
 
+
 .boas_vindas h1 {
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
-    margin-bottom: 16px;
+    margin-bottom: 16px ;
 }
+
 
 .boas_vindas h1 strong {
     font-weight: 500;
@@ -108,7 +111,7 @@ main {
 .assuntos {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 12px
 }
 
 .assuntos button {
@@ -138,11 +141,12 @@ main {
 }
 
 .botao_html div {
-    background: var(--bg-html) ;
+    background: var(--bg-html);
 }
 
 .botao_css div {
     background: var(--bg-css);
+
 }
 
 .botao_javascript div {
@@ -153,19 +157,21 @@ main {
     background: var(--bg-acessibilidade);
 }
 
-@media(min-width: 1100px) {
+@media(min-width: 1100px){
     body {
         background: var(--bg-desktop) var(--bg-color);
         background-size: cover;
         background-repeat: no-repeat;
     }
-    
+
     header {
         margin-block: 81px;
+        
+       
     }
 
     .tema {
-        gap: 16px;
+        gap: 16px
     }
 
     .tema img {
@@ -195,6 +201,7 @@ main {
     .boas_vindas h1 {
         font-size: 64px;
         margin-bottom: 48px;
+
     }
 
     .boas_vindas p {
@@ -202,13 +209,13 @@ main {
     }
 
     .assuntos {
-        gap: 24px;
+        gap: 24px
     }
 
     .assuntos button {
         font-size: 28px;
         padding: 20px;
-        gap: 32px;
+        gap: 32px
     }
 
     .assuntos button div {
